Improve pretty-printers